add new component Education.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,14 @@
 @import './public/sass/Settings/settings.breakpoints';
 
-// .App-logo {
-//   height: 40vmin;
-//   pointer-events: none;
-//   animation: App-logo-spin infinite 20s linear;
-// }
-
 
 .App-container {
+  width: 100%;
   position: relative;
   color: black;
 }
 
 .content-container {
+  width: 100%;
   min-height: 100vh;
   display: grid;
 
@@ -28,17 +24,12 @@
 
   @include for-phone-only {
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
   }
 
 }
 
 .empty-component {
-
-  // @include for-tablet-up {
-  //   display: block;
-  // }
-
   @include for-tablet-portrait-up {
     display: block;
   }
