--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -1,17 +1,9 @@
+@import '../../public/sass/Settings/settings.colors';
 
 .about-container {
     & .about-firstname {
-        font-size: 60px;
         font-weight: bold;
         text-transform: uppercase;
-    }
-
-    & .about-family {
-        color: hsl(217deg, 53%, 48%);
-    }
-
-    & .about-icons {
-        color: hsl(217deg, 53%, 48%);
     }
 
     & #hr-about {
@@ -33,7 +25,7 @@
         position: absolute;
         width: 100%;
         height: 1px;
-        background-color: hsl(0deg, 0%, 0%);
+        background-color: $third-color-black;
         left: 0px;
         bottom: 0px;
     }
@@ -44,17 +36,11 @@
         & .more-info-btn {
             width: 150px;
             height: 50px !important;
-            background-color: hsl(217deg, 53%, 48%) !important;
-    
-            &:hover{
-                background-color: hsl(217deg, 63%, 50%) !important;
-            }
         }
     }
 
     & .about-knowledge-of-language {
         font-size: 24px;
         font-weight: bold;
-        color: hsl(217deg, 53%, 48%);
     }
 }
