--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -2,6 +2,7 @@
 
 
 .main-container {
+    width: 100%;
     padding: 20px 90px;
     margin-top: 20px;
 
@@ -14,7 +15,8 @@
     }
 
     @include for-phone-only {
-        padding: 20px;
+        padding: 5px 10px 0px 10px;
+        
     }
 
     @include for-desktop-up {
