--- a/src/components/Navigation/left-side-menu.scss
+++ b/src/components/Navigation/left-side-menu.scss
@@ -1,4 +1,7 @@
 @import '../../public/sass/Settings/settings.breakpoints';
+@import '../../public/sass/Settings/settings.colors';
+
+@import '../../public/sass/Tools/tools.mixins';
 
 
 .Left-Side-Menu-Container {
@@ -7,8 +10,8 @@
     left: 0px;
     width: 300px;
     height: 100vh;
-    background-color: hsl(217deg, 53%, 48%);
-    color: hsl(0deg 0% 100%);
+    background-color: $primary-color-blue;
+    color: $secondary-color-white;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 300px 1fr 200px;
@@ -41,7 +44,7 @@
             cursor: pointer;
             border-radius: 50%;
             margin-left: 0px !important;
-            box-shadow: 0px 0px 20px 0px hsla(0deg 0% 0% / 0.75);
+            @include box-shadow;
         }
     }
 }
@@ -77,7 +80,7 @@
     & > .link-container > a {
         transition: all 0.4s ease-out;
         font-weight: bold;
-        color: hsl(0deg 0% 100%);
+        color: $secondary-color-white;
     }
 
     & > .link-container > i {
@@ -86,7 +89,7 @@
         top: 5px;
         left: -20px;
         font-size: 24px;
-        color: hsl(0deg 0% 100%) !important;
+        color: $secondary-color-white !important;
         transition: all 0.3s ease-out;
     }
 
