--- a/src/App.scss
+++ b/src/App.scss
@@ -2,42 +2,42 @@
 
 
 .App-container {
-  width: 100%;
+  width: 100% !important;
   position: relative;
   color: black;
 }
 
-.content-container {
-  width: 100%;
-  min-height: 100vh;
-  display: grid;
+// .content-container {
+//   width: 100%;
+//   //min-height: 100vh;
+//   display: grid;
 
-  @include for-tablet-up {
-    grid-template-columns: 300px 1fr;
-    grid-template-rows: 100vh 1fr;
-  }
+//   @include for-tablet-up {
+//     grid-template-columns: 300px 1fr;
+//     grid-template-rows: 100vh 1fr;
+//   }
 
-  @include for-tablet-down {
-    grid-template-columns: 250px 1fr;
-    grid-template-rows: 1fr;
-  }
+//   @include for-tablet-down {
+//     grid-template-columns: 250px 1fr;
+//     grid-template-rows: 1fr;
+//   }
 
-  @include for-phone-only {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-  }
+//   @include for-phone-only {
+//     grid-template-columns: 1fr;
+//     grid-template-rows: 1fr;
+//   }
 
-}
+// }
 
-.empty-component {
-  @include for-tablet-portrait-up {
-    display: block;
-  }
+// .empty-component {
+//   @include for-tablet-portrait-up {
+//     display: block;
+//   }
 
-  @include for-phone-only {
-    display: none;
-  }
-}
+//   @include for-phone-only {
+//     display: none;
+//   }
+// }
 
 
 
