--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,5 @@
 @import './public/sass/Elements/elements.h3';
 @import './public/sass/Elements/elements.btn';
 @import './public/sass/Elements/elements.text.color';
+@import './public/sass/Elements/elements.hr';
+@import './public/sass/Elements/elements.afterline';
