--- a/src/index.scss
+++ b/src/index.scss
@@ -15,3 +15,5 @@
 @import './public/sass/Elements/elements.text.color';
 @import './public/sass/Elements/elements.hr';
 @import './public/sass/Elements/elements.afterline';
+@import './public/sass/Elements/elements.a';
+@import './public/sass/Elements/elements.background.color';
