--- a/src/public/sass/Elements/_elements.text.color.scss
+++ b/src/public/sass/Elements/_elements.text.color.scss
@@ -1,5 +1,5 @@
 @import '../../sass/Settings/settings.colors';
 
 .text-color {
-    color: $primary-color-blue;
+    color: $primary-color-blue !important;
 }
