--- a/src/public/sass/Settings/_settings.colors.scss
+++ b/src/public/sass/Settings/_settings.colors.scss
@@ -1,9 +1,10 @@
 
 
-$primary-color-blue: hsl(200, 38%, 58%);
+$primary-color-blue: hsl(200deg, 38%, 58%);
 $secondary-color-white: hsl(0deg 0% 100%);
 $third-color-black: hsl(0deg, 0%, 0%);
 
 $background-hover-color: hsla(0deg 0% 100% / 0.15);
+$main-background-color: hsla(200deg, 38%, 58%, 0.15);
 
 $box-shadow: hsla(0deg 0% 0% / 0.75);
