--- a/src/public/sass/Tools/_tools.mixins.scss
+++ b/src/public/sass/Tools/_tools.mixins.scss
@@ -6,3 +6,15 @@
 	-moz-box-shadow: 0px 0px 20px 0px $box-shadow;
     box-shadow: 0px 0px 20px 0px $box-shadow;
 }
+
+@mixin icon-shadow {
+    -webkit-box-shadow: 0px 1px 9px -2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 1px 9px -2px rgba(0,0,0,0.75);
+    box-shadow: 0px 1px 9px -2px rgba(0,0,0,0.75);
+}
+
+@mixin icon-shadow-hover {
+    -webkit-box-shadow: 0px 1px 9px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 1px 9px 2px rgba(0,0,0,0.75);
+    box-shadow: 0px 1px 9px 2px rgba(0,0,0,0.75);
+}
