fixed Table tu-gab shadow!

--- a/src/components/Qualification/disciplineTable.scss
+++ b/src/components/Qualification/disciplineTable.scss
@@ -22,7 +22,7 @@
     
     & table {
         cursor: pointer;
-        @include box-shadow;
+        @include table-shadow;
         border-radius: 5px;
         overflow: hidden;
 
