--- a/src/public/sass/Settings/_settings.colors.scss
+++ b/src/public/sass/Settings/_settings.colors.scss
@@ -7,4 +7,5 @@ $third-color-black: hsl(0deg, 0%, 0%);
 $background-hover-color: hsla(0deg 0% 100% / 0.15);
 $main-background-color: hsla(200deg, 38%, 58%, 0.15);
 
-$box-shadow: hsla(0deg 0% 0% / 0.75);
+$box-shadow: hsla(0deg 0% 0% / 0.40);
+$table-shadow: hsla(0deg 0% 0% / 0.30);
