--- a/src/public/sass/Tools/_tools.mixins.scss
+++ b/src/public/sass/Tools/_tools.mixins.scss
@@ -1,10 +1,16 @@
-@import '../Settings/settings.colors';
+@import '../Settings/_settings.colors';
 
 
 @mixin box-shadow {
-    -webkit-box-shadow: 0px 0px 20px 0px $box-shadow;
-	-moz-box-shadow: 0px 0px 20px 0px $box-shadow;
-    box-shadow: 0px 0px 20px 0px $box-shadow;
+    -webkit-box-shadow: 0px 0px 15px 0px $box-shadow;
+	-moz-box-shadow: 0px 0px 15px 0px $box-shadow;
+    box-shadow: 0px 0px 15px 0px $box-shadow;
+}
+
+@mixin table-shadow {
+    -webkit-box-shadow: 0px 0px 7px 0px $table-shadow;
+	-moz-box-shadow: 0px 0px 7px 0px $table-shadow;
+    box-shadow: 0px 0px 7px 0px $table-shadow;
 }
 
 @mixin icon-shadow {
